chore(claude): expand CLAUDE.md into a full session operating guide (#238)
* chore(claude): expand CLAUDE.md into a full session operating guide

CLAUDE.md was a rule list that assumed context sessions did not have,
so each session re-derived repo facts (module layout, build gotchas,
workflow) or tripped known footguns. Front-load the verified facts:

- What This Project Is: stack, coordinates, subsystems, key terms
- Repository Map and The Wall: reactor module table with import rules;
  enterprise/out-of-repo realities
- Hard constraints added: TCK-before-merge for SPI changes;
  KernelErrorCodes as single source of truth for error codes
- Scoped bans sharpened: String.formatted on failure paths,
  double-checked locking, ad-hoc Arena (WatermarkManager bypass)
- Testing Model: test triad, TCK binding pattern, tagged tests
  excluded from default build, Windows TLS auto-skip
- Build/Verify/DoD: golden command, PMD lint footgun, arch guard
  command, CI gate sequence, 6-step definition of done
- Branch/PR/Release workflow: development/* base, naming, conventional
  commits, global ADR namespace, local-only planning artifacts
- Skill mandates: exeris-pr-preflight before push/PR,
  exeris-adr-register before ADR authoring

All factual claims cross-checked against the repo at 0.10.0
(root pom modules/version, docs/subsystems listing, KernelErrorCodes
path, ROADMAP/CONTRIBUTING section anchors).

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>

* chore(claude): correct lint-gate facts per PR #238 review

The "lint footgun" claim was backwards: exeris-kernel-parent binds
checkstyle:check to validate and pmd:check to verify (both fail on
violation) and has since the first commit, so an unskipped
mvn clean install IS lint-gated. The real footgun is different:
-Dpmd.skip/-Dcheckstyle.skip poison the proof, and PMD binds at
verify, so a `mvn test` loop never reaches it. Reword CLAUDE.md and
the exeris-pr-preflight skill accordingly — the skill carried the
identical wro